[package]
name = "hello"
version = "0.1.0"
authors = ["mfaghihi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-std = { version = "0.3.0", default-features = false }

ark-groth16 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.3.0", default-features = false }
ark-relations = { version = "0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-ed-on-bls12-377 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-ed-on-bn254 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bn254 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.3.0", branch = "main", features = [ "r1cs" ] }
ark-ff = { version = "0.3.0", default-features = false, features = [ "asm" ] }
ark-marlin = { version = "0.3.0",  default-features = false }
ark-poly = { version = "0.3.0", default-features = false }
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false, features = [ "derive" ] }

[features]
#default = [ "r1cs", "std",]
#default = [ "bls12_377"]
#default = [ "bls12_381"]
default = [ "bn254c"]
bn254c = [ ]
bls12_381 = [ ]
bls12_377 = [ ]

#curvetype=["Bn254",]